--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         node-version: '18.x'
         cache: 'npm'
-    - run: npm ci
+    - run: npm install
     - run: npm run build --if-present
 
